fix(#28): gemini-code-assist 리뷰 피드백 반영 - 유효성 검증 로직 개선
- Optional.ofNullable() 사용으로 null 처리 개선
- String.isBlank() 메서드로 공백 문자 검증 개선 (Java 11+)
- 테스트 코드의 중복 선언된 inventoryCaptor 제거

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>